--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -14,6 +14,7 @@ knitr::opts_chunk$set(echo=TRUE, message=TRUE, warning=TRUE)
 
 ```{r}
 actionButton("counter", "Add")
+counter = 0
 ```
 
 ```{r}
@@ -22,6 +23,6 @@ counter = eventReactive(input$counter, {counter + 1})
 
 ```{r}
 renderPlot({
-    barplot(counter)
+    # barplot(counter)
 })
 ```
