--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -15,17 +15,19 @@ library(ggplot2)
 
 ```{r}
 actionButton("counter", "Add")
-counter = 0
+counter = reactiveValues(counter_value = 0) 
 ```
 
 ```{r}
-counter = eventReactive(input$counter, {counter + 1})
+ observeEvent(input$add1, {
+      counter$countervalue = counter$countervalue + 1
+})
 ```
 
 ```{r}
 
 renderPlot({
-    ggplot(data.frame(counter=counter)) + geom_bar()
+    ggplot(data.frame(counter=counter$countervalue)) + geom_bar()
     # barplot(counter)
 })
 ```
