--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -14,18 +14,17 @@ library(ggplot2)
 
 
 ```{r}
-actionButton("counter", "Add")
+actionButton("add", "Add")
 counter = reactiveValues(counter_value = 0) 
 ```
 
 ```{r}
- observeEvent(input$add1, {
+ observeEvent(input$add, {
       counter$countervalue = counter$countervalue + 1
 })
 ```
 
 ```{r}
-
 renderPlot({
     ggplot(data.frame(counter=counter$countervalue)) + geom_bar()
     # barplot(counter)
