--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -24,8 +24,6 @@ observeEvent(input$add, { counter$counter_value = counter$counter_value + 1})
 
 ```{r}
 renderPlot({
-    data = data.frame(counter=counter$counter_value)
-    ggplot(data, aes(x=counter)) + geom_bar()
-    # barplot(counter)
+    barplot(counter)
 })
 ```
