--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -20,7 +20,7 @@ actionButton("add", "Add")
 ```{r}
 values = reactiveValues()
 values$counter = 0
-values$data = data.frame(x=numeric(), y=numeric())
+# values$data = data.frame(x=numeric(), y=numeric())
 
 observeEvent(input$add, { 
     values$counter = values$counter + 1
