--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -26,7 +26,7 @@ observeEvent(input$add, {
     values$counter = values$counter + 1
     values$data = rbind(values$data, 
                         data.frame(x=runif(1, min=0, max=1),
-                                   y=runif(1, min=0, max=1))
+                                   y=runif(1, min=0, max=1)))
 })
 ```
 
@@ -36,8 +36,7 @@ renderText({
 })
 
 renderPlot({
-
-    
+  
     # df = data.frame(N=values$counter)
     
 })
