--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -33,9 +33,7 @@ observeEvent(input$add, {
 output$data = renderDataTable({values$data})
 ```
 
-```{r}
-fluidRow(column(dataTableOutput("data"), width=1))
-```
+
 
 Page 1
 =====================================  
@@ -45,8 +43,14 @@ renderText({
 })
 
 renderPlot({
-  
+    ggplot(values$data, aes(x=x, y=y)) + geom_point()
     # df = data.frame(N=values$counter)
     
 })
+```
+
+Page 2
+=====================================  
+```{r}
+dataTableOutput("data")
 ```
