--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -11,6 +11,11 @@ library(ggplot2)
 library(DT)
 ```
 
+```{r}
+min=0
+max=1
+```
+
 Sidebar {.sidebar}
 =====================================
 
@@ -26,8 +31,8 @@ values$data = data.frame(x=numeric(), y=numeric())
 observeEvent(input$add, { 
     values$counter = values$counter + 1
     values$data = rbind(values$data, 
-                        data.frame(x=runif(1, min=0, max=1),
-                                   y=runif(1, min=0, max=1)))
+                        data.frame(x=runif(1, min=min, max=max),
+                                   y=runif(1, min=min, max=max)))
 })
 
 output$data = renderDataTable({values$data})
@@ -45,8 +50,11 @@ Page 1
 
 ```{r}
 renderPlot({
-    ggplot(values$data, aes(x=x, y=y)) + geom_point()
-    # df = data.frame(N=values$counter)
+    ggplot(values$data, aes(x=x, y=y)) + 
+        geom_point() +
+        theme_minimal() +
+        scale_x_continuous(limits=c(min,max)) +
+        scale_y_continuous(limits=c(min,max))
     
 })
 ```
