--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -61,7 +61,7 @@ renderPlot({
         theme_minimal() +
         scale_x_continuous(limits=c(min,max)) +
         scale_y_continuous(limits=c(min,max)) +
-        geom_polygon(aes(x+max, y+max), data = circle, inherit.aes = F) + 
+        geom_polygon(aes(x, y), data = circle, inherit.aes = F) + 
         guides(color=FALSE)
         
     
