--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -50,6 +50,12 @@ renderText({
 })
 ```
 
+```{r}
+renderText({ 
+    paste("$\pi$: ", sum(values$data$inside==1)/length(values$data$inside))
+})
+```
+
 
 Page 1
 =====================================  
