--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -40,6 +40,10 @@ $x^2 + y^2 < R^2$, where $R$ is the radius of the circle. If it does, mark as "i
 
 The simulated value of pi should be $\pi = 4 * \frac{number of points in circle}{number of points in square}$
 
+$A_s = 2R * 2R = 4R^2$
+$A_c = \pi * R^2$
+$\frac{A_c}{A_s} = \frac{\pi * R^2}{4R^2} = \frac{\pi}{4}$
+
 
 ```{r}
 values = reactiveValues()
