--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -29,29 +29,17 @@ The aim of this exercise is to simulate the value of $\pi$.
 
 ```{r}
 actionButton("add", "Add")
+pi_sim = 4*sum(values$data$inside==1)/length(values$data$inside)
 ```
-
-```{r}
-renderText({ 
-    paste("Counter: ", values$counter*per_step)
-})
-```
-
-```{r}
-renderText({ 
-    if(dim(values$data)[1] >= 1) {
-        paste("Simulate pi: ", 4*sum(values$data$inside==1)/length(values$data$inside))
-    }
-})
-```
-
-Real $\pi$ = `r pi`<br>
+Counter: `r values$counter*per_step` <br>
+Simulated $\pi$ = `r pi_sim` <br>
+Real $\pi$ = `r pi` <br>
 
 First, we draw a circle and a square.
 
-1. Randomly draw x,y coordinate in square. 
-2. Check if it falls within the circle using formula
-$x^2 + y^2 < R^2$, where $R$ is the radius of the circle. If it does, mark as "inside", otherwise "outside".
+1. Randomly draw x,y coordinates in square. 
+2. Check if coordinates falls within the circle using formula
+$x^2 + y^2 < R^2$, where $R$ is the radius of the circle. 
 3. Tally number of points in circle/ number of points in square. 
 
 
