--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -29,6 +29,7 @@ The aim of this exercise is to simulate the value of $\pi$.
 
 ```{r}
 actionButton("add", "Add")
+actionButton("reset", "Reset")
 ```
 
 ```{r}
@@ -73,6 +74,10 @@ observeEvent(input$add, {
     y = runif(per_step, min=min, max=max)
     inside = ifelse(x^2 + y^2 < max^2, 1, 0) 
     values$data = rbind(values$data, data.frame(x=x, y=y, inside=inside))
+})
+observeEvent(input$reset, {
+    values$counter = 0
+    values$data = data.frame(x=numeric(), y=numeric(), inside=integer())
 })
 
 output$data = renderDataTable({values$data})
