[EJYS] Add style

--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -36,12 +36,12 @@ actionButton("reset", "Reset")
 renderText({ 
     if(dim(values$data)[1] >= 1) {
         pi_sim = 4*sum(values$data$inside==1)/length(values$data$inside)
-        paste("Simulated pi: ", round(pi_sim, 7))
+        paste("Simulated pi = ", round(pi_sim, 7))
     }
 })
 ```
 
-Real $\pi$ = `r pi`<br>
+Real pi = `r pi`<br>
 
 First, we draw a circle and a square.
 
@@ -81,22 +81,24 @@ Page 1
 =====================================  
 
 ```{r}
-renderPlot({
-    ggplot(values$data, aes(x=x, y=y, color=factor(inside))) + 
-        geom_polygon(aes(x, y), data = circle, inherit.aes = F) + 
-        geom_point() +
-        theme_minimal() +
-        scale_x_continuous(limits=c(min,max)) +
-        scale_y_continuous(limits=c(min,max)) +
-        guides(color=FALSE)
+
+fluidRow(
+    renderPlot({
+        ggplot(values$data, aes(x=x, y=y, color=factor(inside))) + 
+            geom_polygon(aes(x, y), data = circle, inherit.aes = F) + 
+            geom_point() +
+            theme_minimal() +
+            scale_x_continuous(limits=c(min,max)) +
+            scale_y_continuous(limits=c(min,max)) +
+            guides(color=FALSE)
+            
         
-    
-}, width = 500, height = 500)
+    }, width = 400, height = 400)
 
-
-renderText({ 
-    paste("Counter: ", values$counter*per_step)
-})
+    renderText({ 
+        paste("Counter: ", values$counter*per_step)
+    })
+)
 ```
 
 Page 2
