--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -73,7 +73,7 @@ Page 1
 
 fluidPage(
     fluidRow(
-        column(9, 
+        column(6, 
             renderPlot({
                 ggplot(values$data, aes(x=x, y=y, color=factor(inside))) + 
                     geom_polygon(aes(x, y), data = circle, inherit.aes = F) + 
@@ -85,18 +85,18 @@ fluidPage(
                     
                 
             }, width = 500, height = 500)),
-        column(3,
+        column(6,
             fluidPage(
                 renderText({ 
                     paste("Counter: ", values$counter*per_step)
-                    
                 }),
                 renderText({
                     if(dim(values$data)[1] >= 1) {
                         pi_sim = 4*sum(values$data$inside==1)/length(values$data$inside)
                         paste("Simulated pi = ", round(pi_sim, 7))
                     }
-                })
+                }),
+                "Actual pi = `r pi`"
                 )
 )))
 ```
