--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -25,20 +25,20 @@ circle = data.frame(x = sin(angle), y = cos(angle))
 Sidebar {.sidebar}
 =====================================
 
-The aim of this exercise is to simulate the value of $\pi$.
+The aim of this exercise is to simulate the value of $\pi = $ `r pi`.
 
 ```{r}
 actionButton("add", "Add", style="background-color: #337ab7")
 actionButton("reset", "Reset")
 ```
 
-First, we draw a circle and a square.
+- First, we draw a circle and a square.
 
-1. Randomly draw x,y coordinates in square. 
-2. Check if coordinates falls within the circle using formula
-$x^2 + y^2 < R^2$, where $R$ is the radius of the circle. 
-3. Tally number of points in circle/ number of points in square. 
-
+- Second, we start the simulation.
+    1. Randomly draw x,y coordinates in square. 
+    2. Check if coordinates falls within the circle using formula
+    $x^2 + y^2 < R^2$, where $R$ is the radius of the circle. 
+    3. Tally number of points in circle/ number of points in square. Values should converge on $\frac{\pi}{4}$.
 
 $A_s = 2R * 2R = 4R^2$ <br>
 $A_c = \pi * R^2$ <br>
