--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -41,11 +41,13 @@ Second, we start the simulation.
 $x^2 + y^2 < R^2$, where $R$ is the radius of the circle. 
 3. Tally number of points in circle/ number of points in square. Values should converge on $\frac{\pi}{4}$.
 
+This is because <br>
+
 $A_s = 2R * 2R = 4R^2$ <br>
 $A_c = \pi * R^2$ <br>
 $\frac{A_c}{A_s} = \frac{\pi * R^2}{4R^2} = \frac{\pi}{4}$ <br>
 
-The simulated value of pi should be $\pi = 4 * \frac{number of points in circle}{number of points in square}$
+Thus, the simulated value of pi should be $\pi = 4 * \frac{number of points in circle}{number of points in square}$
 
 
 ```{r}
