[EJYS] Change step size

--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -108,8 +108,8 @@ fluidPage(
 )))
 ```
 
-<!-- Page 2
+Page 2
 =====================================  
 ```{r}
 dataTableOutput("data")
-``` -->
+```
