--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -30,6 +30,8 @@ The aim of this exercise is to simulate the value of $\pi$ (`r pi`).
 ```{r}
 actionButton("add", "Add", style="background-color: #337ab7")
 actionButton("reset", "Reset")
+
+numericInput("step", "Step size (power of 10)", 1, min = 1, max = 3)
 ```
 
 First, we draw a circle and a square.<br>
@@ -55,9 +57,9 @@ values = reactiveValues()
 values$counter = 0
 values$data = data.frame(x=numeric(), y=numeric(), inside=integer())
 values$step_size = per_step
+
 observeEvent(input$add, { 
-    values$step_size = ifelse(values$counter < 100, per_step,
-        ifelse(values$counter < 1000, per_step^2, per_step^3))
+    values$step_size = per_step^input$step 
     values$counter = values$counter + values$step_size
     x = runif(values$step_size, min=min, max=max)
     y = runif(values$step_size, min=min, max=max)
