--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -42,6 +42,8 @@ Second, we start the simulation.
 $x^2 + y^2 < R^2$, where $R$ is the radius of the circle. 
 3. Tally number of points in circle/ number of points in square. Values should converge on $\frac{\pi}{4}$.
 
+See page 2 tab for data generated.
+See page 3 tab for more information.
 
 ```{r}
 values = reactiveValues()
