--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -84,7 +84,7 @@ fluidPage(
                     scale_y_continuous(limits=c(min,max)) +
                     guides(color=FALSE) + 
                     coord_fixed()                
-            }), height="90%", width="90%"),
+            }, height="90%", width="90%")),
         column(6,
             fluidPage(
                 renderText({ 
