--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -83,7 +83,7 @@ fluidPage(
                     scale_x_continuous(limits=c(min,max)) +
                     scale_y_continuous(limits=c(min,max)) +
                     guides(color=FALSE) + 
-                    coord_fixed()                
+                    coord_equal()                
             })),
         column(6,
             fluidPage(
