--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -82,8 +82,8 @@ fluidPage(
                     theme_minimal() +
                     scale_x_continuous(limits=c(min,max)) +
                     scale_y_continuous(limits=c(min,max)) +
-                    guides(color=FALSE) 
-            })),
+                    guides(color=FALSE) + coord_equal() 
+            }), height=300, width=300),
         column(6,
             fluidPage(
                 renderText({ 
